--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ iced = { version = "0.9", features = ["tokio"] }
 iced_web = "0.4"
 once_cell = "1.17.1"
 anyhow = "1.0"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
